--- a/lectures/15-sidechan.tex
+++ b/lectures/15-sidechan.tex
@@ -6,7 +6,7 @@
 \newcommand{\leccourse}{Software Foundations of Security and Privacy}
 \newcommand{\lecdate}{} %e.g. {October 21, 2013}
 \newcommand{\lecnum}{15}
-\newcommand{\lectitle}{Side Channels}
+\newcommand{\lectitle}{Timing Side Channels}
 \newcommand{\lecturer}{Matt Fredrikson}
 \newcommand{\lecurl}{https://15316-cmu.github.io/index}
 
@@ -434,330 +434,6 @@ In this version of the program, we still have control flow that is dependent on 
 \item Optimizing compilers might remove some branches, or instructions in branches, that we needed for step-time equivalence, with no guarantee that the resulting program is still constant-time. This would almost certainly happen if we compiled the above with \texttt{gcc} configured with standard optimizations.
 \end{itemize}
 In short, although it may seem unnatural and difficult to write programs so that control flow never depends on secret values, if constant-time execution is needed for security then adhering to this discipline is probably the simplest and least error-prone approach compatible with conventional imperative languages.
-
-\section{Cache side channels}
-
-So far we've focused on timing leaks that arise due to differences in the number of steps taken along a particular control flow path. It might also be the case that even when the program executes exactly the same instructions, there are differences that crop up in execution time due to other factors. One such factor is \textbf{cache behavior}, i.e., the state of the processor's cache lines might cause the execution time to differ with variances in high-security state.
-
-
-\subsection{Example: AES block cipher}
-This type of side channel was famously exploited by Dan Bernstein~\cite{Bernstein04} and others to attack software implementations of the AES encryption primitive. To understand how the attack works, we'll need some basic information about AES. 
-
-\paragraph{Basics of AES.} AES is a block cipher, which encrypts a 16-byte input $p$ using a 16-byte key $k$. Essential to AES's encryption are two so-called S-boxes, which are nothing more than 256 byte tables loaded with values that are constant across all implementations of AES. These tables are expanded into four 1024-byte tables $T_0, T_1, T_2, T_3$ by applying an expansion:
-\[
-\begin{array}{lcl}
-%
-T_0[i] & = & (S'[i], S[i], S[i], S[i] \oplus S'[i]) \\
-T_1[i] & = & (S[i] \oplus S'[i], S'[i], S[i], S[i]) \\
-T_2[i] & = & (S[i], S[i] \oplus S'[i], S'[i], S[i]) \\
-T_3[i] & = & (S[i], S[i], S[i] \oplus S'[i], S'[i]) \\
-\end{array}
-\]
-In most implementations, these tables are pre-computed and loaded into memory before any encryption takes places. For each 16-byte block $p$ to be encrypted, AES first applies a transformation to $k$ (which we won't cover in detail here), and then uses the tables $T_0, T_1, T_2, T_3$ to scramble $p$. Let $p = p_0, p_1, p_2, p_3$, so that $p_i$ is a 4-byte fragment of $p$, and similarly for $k = k_0, k_1, k_2, k_3$. AES replaces each $p_i$ as follows:
-\[
-\begin{array}{lcl}
-%
-p_0 & = & T_0[p_0[0] \oplus k_0[0]] \oplus T_1[p_1[1] \oplus k_1[1]] \oplus T_2[p_2[2] \oplus k_2[2]] \oplus T_3[p_3[3] \oplus k_3[3]] \oplus k_0 \\
-p_1 & = & T_0[p_1[0] \oplus k_1[0]] \oplus T_1[p_2[1] \oplus k_2[1]] \oplus T_2[p_3[2] \oplus k_3[2]] \oplus T_3[p_0[3] \oplus k_0[3]] \oplus k_1 \\
-p_2 & = & T_0[p_2[0] \oplus k_2[0]] \oplus T_1[p_3[1] \oplus k_3[1]] \oplus T_2[p_0[2] \oplus k_0[2]] \oplus T_3[p_1[3] \oplus k_1[3]] \oplus k_2 \\
-p_3 & = & T_0[p_3[0] \oplus k_3[0]] \oplus T_1[p_0[1] \oplus k_0[1]] \oplus T_2[p_1[2] \oplus k_1[2]] \oplus T_3[p_2[3] \oplus k_2[3]] \oplus k_3
-\end{array}
-\]
-More concisely,
-\begin{multline*}
-p_i = 
-T_0[p_i[0] \oplus k_i[0]] 
-\oplus T_1[p_{(i+1) \% 4}[1] \oplus k_{(i+1) \% 4}[1]]
-\oplus T_2[p_{(i+2) \% 4}[2] \oplus k_{(i+2) \% 4}[2]]
-\\
-\oplus T_3[p_{(i+3) \% 4}[3] \oplus k_{(i+3) \% 4}[3]]
-\oplus k_i
-\end{multline*}
-It continues to modify $k$ and $p$ in this fashion for ten rounds, at which point the contents of $p$ are the final ciphertext.
-
-\paragraph{Leaking key bits.} Notice that in each round, the value of $p_i$ is computed using table lookup and xor. Each table lookup accesses an index that is dependent on the contents of the key, e.g., the operation $T_0[p_0[0] \oplus k_0[0]]$ will access a different element of the array holding $T_0$ for different values of the key $k$. If the amount of time necessary to look up this element varies depending on the index that is accessed, then we can reason that the total execution time of the encryption will depend on the value of $k$.
-
-For this to work, we need to know what timing to expect as a function of $k$, or some approximation of it. This is where the cache comes into play. Because cache is a limited resource, several main memory blocks are mapped to the same cache block by way of a straightforward hash function $H$. Suppose that address $a$ was previously read, causing the cache address $H(a)$ to hold its value afterwards, and subsequent accesses to $a$ will complete more quickly. If we then read address $a'$, such that $H(a) = H(a')$, then the corresponding cache block will no longer hold the value at $a$, and a subsequent read to $a$ will need to fetch from main memory, thus taking longer to complete.
-
-This is the crux of the attack: by selectively evicting the cache blocks corresponding to different elements of $T_0, T_1, T_2, T_3$, we can force encryption to take longer than it would have otherwise. Additionally, because the elements of $T_i$ accessed by encryption depend on $k$, we can learn the contents of $k$ by inspecting which evictions cause the encryption to require more time.
-
-In short, the attack works as follows.
-\begin{enumerate}
-\item Ensure that $T_0,T_1,T_2,T_3$ are cached, e.g., by performing an encryption.
-\item Select an element of $T_0$ to be evicted from the cache, and force its eviction by loading from an address that maps to the same cache block. This can be accomplished by guessing a value for $k_0[0]$, and determining which cache block the subsequent table lookup will consult.
-\item Perform an encryption, and measure its time.
-\item After doing this for each element of $T_0$, conclude that $k_0[0]$ takes the value that corresponds to the longest lookup from $T_0$.
-\item Repeat for $k_0[1], k_0[2], \ldots, k_3[3]$.
-\end{enumerate}
-Notice that this attack requires several capabilities of the attacker.
-\begin{itemize}
-\item The ability to time the execution of encryptions with precision sufficient to detect cache timing differences.
-\item The ability to selectively evict portions of the cache.
-\item The ability to force encryptions.
-\item Knowledge of the plaintext (i.e., this is a ``known plaintext'' attack), but not the key. Without this, it is not possible to determine in advance which $T_i$ will be accessed, as it is indexed as $p_{(i+1)\% 4}[j] \oplus k_{(i+1)\%4}[j]$.
-\end{itemize}
-Although these requirements may seem improbable, attacks like this have been demonstrated in practice, and preventing them requires careful constant-time programming discipline.
-
-\subsection{Plugging the leak} 
-
-Like in the case of \texttt{fastmatch}, this vulnerability arose due to the attacker's ability to detect timing differences in an operation that depends on secret data. These timing differences were caused by the cache's state depending on this secret data, which gave the attacker the ability to degrade performance when her guess for the secret key was correct.
-
-However, the problem is more subtle than before, as even correcting for timing would not necessarily thwart attack in this case. Consider an attacker who operates as follows.
-\begin{enumerate}
-\item Vacate the entire cache.
-\item Trigger a single encryption.
-\item Access memory corresponding to each cache block, and see which addresses take longer to load. Those that do must not have been accessed during the AES operation.
-\end{enumerate}
-This attack doesn't measure the encryption routine's timing at all, but instead measures the timing of the attacker's code! In fact, this is actually a more efficient attack, as one encryption yields substantially more information about which table elements were accessed, and thus more information about the key.
-
-This variant of the attack works because the cache is a shared resource that allows users to infer details of how others use it. Specifically, the cache allows users to determine which memory addresses were recently accessed by other processes. Thinking in general terms, we can thus abstract the attacker's abilities here as observing memory access patterns: the cache side channel attacker is able to observe which memory locations are accessed by a program, but not the contents of the access.
-
-Armed with this insight, we can begin to reason about how to effectively mitigate cache side channels. Before, we reasoned that the number of execution steps (our proxy for timing) could be mitigated by ensuring that control flow does not depend on the contents of secret variables, as long as each step takes the same amount of time. Now, we can translate this approach to our attacker's new set of observations, and conclude that attacks like the one we just saw can be mitigated by ensuring that the set of memory addresses accessed by the program does not depend on secret state.
-
-\subsection{Memory access as cost}
-
-\begin{figure}
-\centering
-\linferenceRule{}{\langle\omega,c\rangle \bigstep_{\mathbb{Z}}^\epsilon c}
-\quad
-\linferenceRule{
-  \omega_V(x) = v
-}{
-  \langle\omega,x\rangle \bigstep_{\mathbb{Z}}^\epsilon v
-}
-\quad
-\linferenceRule{
-  \langle\omega,\astrm\rangle \bigstep_{\mathbb{Z}}^r v_1
-  &\omega_M(v_1) = v_2
-}{
-  \langle\omega,\pderef{\astrm}\rangle \bigstep_{\mathbb{Z}}^{r :: v_1} v_2
-}
-\quad
-\linferenceRule{
-  \langle\omega,\astrm\rangle \bigstep_{\mathbb{Z}}^{r_1} v_1
-  &\langle\omega,\bstrm\rangle \bigstep_{\mathbb{Z}}^{r_2} v_2
-}{
-  \langle\omega,\astrm \odot \bstrm\rangle \bigstep_{\mathbb{Z}}^{r_1+r_2+1} v_1 \odot v_2
-}
-\\[1em]
-\linferenceRule{}{\langle\omega,\mathtt{true}\rangle \bigstep_\mathbb{B}^\epsilon \ltrue}
-\quad
-\linferenceRule{}{\langle\omega,\mathtt{false}\rangle \bigstep_\mathbb{B}^\epsilon \lfalse}
-\quad
-\linferenceRule{
-  \langle\omega,\ausfml\rangle \bigstep_\mathbb{B}^r b
-}{
-  \langle\omega,\odot\ausfml\rangle \bigstep_\mathbb{B}^{r} \odot b
-}
-\quad
-\linferenceRule{
-  \langle\omega,\ausfml\rangle \bigstep_\mathbb{B}^{r_1} b_1
-  &\langle\omega,\busfml\rangle \bigstep_\mathbb{B}^{r_2} b_2
-}{
-  \langle\omega,\ausfml~\odot~\busfml\rangle \bigstep_\mathbb{B}^{r_1::r_2} b_1 \odot b_2
-}
-\\[1em]
-\linferenceRule{
-  \langle\omega,\astrm\rangle \bigstep_{\mathbb{Z}}^r v
-}{
-  \langle\omega,x := \astrm\rangle \bigstep^{r} \memupd{\omega_V}{x}{v}
-}
-\quad
-\linferenceRule{
-  \langle\omega,\bstrm\rangle \bigstep_{\mathbb{Z}}^{r_1} v_1
-  &\langle\omega,\astrm\rangle \bigstep_{\mathbb{Z}}^{r_2} v_2
-}{
-  \langle\omega,\pderef{\astrm}:=\bstrm\rangle \bigstep_{\mathbb{Z}}^{r_1 :: r_2 :: v_2} \memupd{\omega_M}{v_2}{v_1}
-}
-\\[1em]
-\linferenceRule{
-  \langle\omega,\asprg\rangle \bigstep^{r_1} \omega_1
-  &\langle\omega_1,\bsprg\rangle \bigstep^{r_2} \omega'
-}{
-  \langle\omega,\asprg;\bsprg\rangle \bigstep^{r_1::r_2} \omega'
-}
-\;
-\linferenceRule{
-  \langle\omega,\ausfml\rangle \bigstep_{\mathbb{B}}^{r_1} \ltrue
-  &\langle\omega,\asprg\rangle \bigstep^{r_2} \omega'
-}{
-  \langle\omega,\pif{\ausfml}{\asprg}{\bsprg}\rangle \bigstep^{r_1::r_2} \omega'
-}
-\;
-\linferenceRule{
-  \langle\omega,\ausfml\rangle \bigstep_{\mathbb{B}}^{r_1} \lfalse
-  &\langle\omega,\bsprg\rangle \bigstep^{r_2} \omega'
-}{
-  \langle\omega,\pif{\ausfml}{\asprg}{\bsprg}\rangle \bigstep^{r_1::r_2} \omega'
-}
-\\[1em]
-\linferenceRule{
-  \langle\omega,\ausfml\rangle \bigstep_{\mathbb{B}}^{r} \lfalse
-}{
-  \langle\omega,\pwhile{\ausfml}{\asprg}\rangle \bigstep^{r} \omega
-}
-\quad
-\linferenceRule{
-  \langle\omega,\ausfml\rangle \bigstep_{\mathbb{B}}^{r_1} \ltrue
-  &\langle\omega,\asprg;\pwhile{\ausfml}{\asprg}\rangle \bigstep^{r_2} \omega'
-}{
-  \langle\omega,\pwhile{\ausfml}{\asprg}\rangle \bigstep^{r_1::r_2} \omega'
-}
-
-\caption{Memory access cost semantics for the simple imperative language. The costs indicate the sequence of memory accesses made when executing the program in a given state.}
-\label{fig:memsemantics}
-\end{figure}
-
-To mitigate timing channels in the model that treats execution steps as observations, we formalized security in terms of cost semantics using execution step costs, and then designed a type system that prevent leakage from secret state to that cost. We can follow a similar strategy for cache side channels by defining a cost semantics that reflects memory access patterns in the cost. 
-
-Now our cost domain will consist of sequences of memory indices that are either read or written throughout the execution of a program. So for the following program that makes three memory accesses.
-\[
-x := \pderef{16}; x := x + 1; \pderef{32} := \pderef{16} + x;
-\]
-We would have the following ``cost'' as a sequential list of accesses: $16 :: 16 :: 32$. We will use $\epsilon$ to denote the empty list. Then the cost semantics for memory accesses are shown in Figure~\ref{fig:memsemantics}. For the most part these rules follow the same basic form as the execution step cost semantics shown in Figure~\ref{fig:costsemantics}. Compound commands such as composition and conditional ``add up'' the costs $r_1$ and $r_2$ of their subcomponents using sequences concatenation $r_1 :: r_2$ rather than integer addition. Expressions and commands whose evaluation result in no memory accesses take cost $\epsilon$ to reflect the fact that they leave no observable information in the cost.
-
-The only rules that change the cost in non-trivial ways are those for memory lookup $\pderef{\astrm}$ and update $\pderef{\astrm} := \bstrm$. In the former case, the index $\astrm$ is evaluated to $v_1$, and this evaluation step has its own cost $r$. Then the final cost for this expression is $r :: v_1$, as the location $v_1$ is accessed after $r$ is incurred. In the latter case of memory update, first the right-hand side $\bstrm$ is evaluated at cost $r_1$, then the index $\astrm$ is evaluated to $v_2$ at cost $r_2$. Finally, the cost of executing this command is $r_1 :: r_2 :: v_2$, which reflects the order in which the subexpressions were evaluated with the final access being the one that updates memory in this command.
-
-Now that we have characterized the attacker's observation in a cost semantics, we must define what it means for a program to be secure in this model. Luckily, the definitions from before as shown in Eqs.~\ref{eq:costnonint} and \ref{eq:costfull} do not make any assumptions about the cost domain other than that it is equipped with some notion of equality. Certainly finite sequential lists of memory accesses have equality, so we can just re-use those notions of cost-aware non-interference here again.
-
-\subsection{A cache-channel type system}
-
-\begin{figure}
-\centering
-\begin{calculus}
-\cinferenceRule[constl|ConstL]{const low}
-{\linferenceRule[sequent]
-  {}
-  {\lsequent{\Gamma}{c : \lowsec}}
-}{}%
-\end{calculus}
-\hspace{\linferenceRulehskipamount}
-\begin{calculus}
-\cinferenceRule[truel|TrueL]{true low}
-{\linferenceRule[sequent]
-  {}
-  {\lsequent{\Gamma}{\keywordfont{true} : \lowsec}}
-}{}%
-\end{calculus}
-\hspace{\linferenceRulehskipamount}
-\begin{calculus}
-\cinferenceRule[falsel|FalseL]{false low}
-{\linferenceRule[sequent]
-  {}
-  {\lsequent{\Gamma}{\keywordfont{false} : \lowsec}}
-}{}%
-\end{calculus}
-\\[1em]
-\begin{calculus}
-\cinferenceRule[vartype|Var]{variable type}
-{\linferenceRule[sequent]
-  {}
-  {\lsequent{\Gamma}{x : \Gamma(x)}}
-}{}%
-\end{calculus}
-\hspace{\linferenceRulehskipamount}
-\begin{calculus}
-\cinferenceRule[memdtype|MemD]{deref type}
-{\linferenceRule[sequent]
-  {
-  	\lsequent{\Gamma}{\astrm : \ell}
-  	&\ell \lub \Gamma(\pc) \sqsubseteq \lowsec
-  }
-  {\lsequent{\Gamma}{\pderef{\astrm} : \lowsec}}
-}{}%
-\end{calculus}
-\\[1em]
-\begin{calculus}
-\cinferenceRule[unop|UnOp]{unary operator}
-{\linferenceRule[sequent]
-  {\lsequent{\Gamma}{\astrm : \ell}}
-  {\lsequent{\Gamma}{\odot~\astrm : \ell}}
-}{}%
-\end{calculus}
-\hspace{\linferenceRulehskipamount}
-\begin{calculus}
-\cinferenceRule[binop|BinOp]{binary operator}
-{\linferenceRule[sequent]
-  {\lsequent{\Gamma}{\astrm : \ell_1} & \lsequent{\Gamma}{\bstrm : \ell_2}}
-  {\lsequent{\Gamma}{\astrm\odot\bstrm : \ell_1 \lub \ell_2}}
-}{}%
-\end{calculus}
-\hspace{\linferenceRulehskipamount}
-\begin{calculus}
-\cinferenceRule[composeflow|Comp]{composition}
-{\linferenceRule[sequent] {
-  \lsequent{\Gamma}{\asprg}
-  &\lsequent{\Gamma}{\bsprg}
-}{
-  \lsequent{\Gamma}{\asprg;\bsprg}
-}}{}%
-\end{calculus}
-\\[1em]
-\begin{calculus}
-\cinferenceRule[asgnflow|Asgn]{assignment}
-{\linferenceRule[sequent] {
-  \lsequent{\Gamma}{\astrm : \ell_1}
-  &\ell_1 \lub \Gamma(\pc) \posetleq \Gamma(x)
-}{
-  \lsequent{\Gamma}{x := \astrm}
-}}{}%
-\end{calculus}
-\\[1em]
-\begin{calculus}
-\cinferenceRule[memuflow|MemU]{memory update}
-{\linferenceRule[sequent] {
-  \lsequent{\Gamma}{\astrm : \ell_1}
-  &\lsequent{\Gamma}{\bstrm : \ell_2}
-  &\ell_1 \lub \ell_2 \lub \Gamma(\pc) \posetleq \lowsec
-}{
-  \lsequent{\Gamma}{\pderef{\astrm} := \bstrm}
-}}{}%
-\end{calculus}
-\\[1em]
-\begin{calculus}
-\cinferenceRule[condflow|If]{conditional}
-{\linferenceRule[sequent] {
-  \lsequent{\Gamma}{\ivr : \ell}
-  &\ell' = \ell \lub \Gamma(\pc)
-  &\lsequent{\Gamma,\pc : \ell'}{\asprg}
-  &\lsequent{\Gamma,\pc : \ell'}{\bsprg}
-}{
-  \lsequent{\Gamma}{\pif{\ivr}{\asprg}{\bsprg}}
-}}{}%
-\end{calculus}
-\\[1em]
-\begin{calculus}
-\cinferenceRule[whileflow|While]{while}
-{\linferenceRule[sequent] {
-  \lsequent{\Gamma}{\ivr : \ell}
-  &\ell' = \ell \lub \Gamma(\pc)
-  &\lsequent{\Gamma,\pc : \ell'}{\asprg}
-}{
-  \lsequent{\Gamma}{\pwhile{\ivr}{\asprg}}
-}}{}%
-\end{calculus}
-
-\caption{Conservative type system for mitigating cache side-channel leaks.}
-\label{fig:cachetypes}
-\end{figure}
-
-Figure~\ref{fig:cachetypes} shows a type system that follows the same rationale as the one that we saw for timing side-channels. Namely, a program is well-typed in this system only if there is no flow of information from secret state to memory accesses. All of the rules except \irref{memdtype} and \irref{memuflow} are exactly as they were in the original non-interference type system. The rule \irref{memdtype} for memory lookup expressions first types the index expression $\astrm$ as $\ell$, and then assigns the lookup expression type \lowsec as long as $\ell \lub \Gamma(\pc) \sqsubseteq \lowsec$. This prevents lookups in both cases where $\astrm$ contains secret information, as well as when lookups happen in secret-dependent control flow. 
-
-Also important is the fact that \irref{memdtype} enforces the invariant that everything read from memory is of type \lowsec. The second half of this invariant comes from rule \irref{memuflow} for memory updates, which checks that the type $\ell_2$ of the right-hand side as well as the \pc are both typed \lowsec before allowing the update. If the type system did not enforce this invariant, then we would need to assign security labels to each cell of memory as part of the context $\Gamma$. It may be possible if a bit unwieldly to do so, but for the purposes of this lecture not necessary.
-
-Finally, \irref{memuflow} also checks that the type of the index expression is \lowsec, which is again necessary to prevent secret information from leaking into the access cost. In the end this type system enforces the same security guarantee as the timing-channel type system, as stated in Theorem~\ref{thm:cache-types}.
-
-\begin{theorem}
-\label{thm:cache-types}
-The type system in Figure~\ref{fig:cachetypes} enforces both non-interference and cache side-channel security. That is, if $\lsequent{\Gamma}{\asprg}$ by the rules in Figure~\ref{fig:cachetypes} then for all $\omega_1\approx_\lowt\omega_2$, 
-\[
-\langle \omega_1, c\rangle \Downarrow^{r_1} \omega_1' \land \langle\omega_2, c\rangle\Downarrow^{r_2}\omega_2' \Longrightarrow r_1 = r_2 \land \omega_1' \approx_\lowt \omega_2'
-\]
-So $\asprg$ terminates with the same memory access patterns and in $\lowsec$-equivalent final states when initialized in either $\omega_1$ or $\omega_2$
-\end{theorem}
-\begin{proof}
-The proof of this theorem follows a very similar form to that of Theorem~\ref{thm:sidechan-types} and the soundness theorem of the non-interference type system from Lecture 12. The only extra consideration that must be done is regarding \irref{memdtype} and \irref{memuflow}. It may be helpful to factor out a lemma which proves the invariant that the contents of $\pderefop$ are never influenced by secret data. This is left as an exercise.
-\end{proof}
 
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
